Fix more mobile layout issues
Show name in header on mobile, fix nav centering by removing trailing margin.
Fix about page text clipping by resetting fixed widths to 100% on mobile.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -277,6 +277,11 @@ a.button {
 			.menu {
 				position: static;
 				margin-top: 10px;
+				text-align: center;
+
+				a:last-child {
+					margin-right: 0;
+				}
 			}
 		}
 	}
@@ -429,6 +434,25 @@ a.button {
 				width: 50%;
 
 				margin-bottom: -25px;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 650px) {
+	.about-page {
+		.title-bar {
+			.sub-heading, .description {
+				width: 100%;
+			}
+		}
+		.facts-bar {
+			.sub-heading, .description {
+				width: 100%;
+				font-size: 14px;
+			}
+			.super-heros {
+				width: 100%;
 			}
 		}
 	}
